# esp32-poster-backend

./: .gitignore  AGENTS.md  GEMINI.md  MULTI_AGENT_PLAN.md  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: backend.yml  deploy-main.yml  frontend.yml  infra.yml  pr-backend.yml  pr-frontend.yml  pr-infra.yml  pr-processing.yml  processing.yml
backend/: AGENTS.md
backend/image_processor/: Dockerfile  main.py  pyproject.toml
backend/image_processor/src/: aws.py  main.py  processor.py
backend/image_processor/tests/: test_processor.py
frontend/: AGENTS.md
infra/: AGENTS.md
scripts/: spawn-agent.sh
