[project]
name = "image-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.67",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "moto>=5.1.22",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
